--- a/main.html
+++ b/main.html
@@ -5,9 +5,10 @@
 <head>
 	<link rel="stylesheet" href="styles.css">
 </head>
+	<title>Pseudo-Elements Example</title>
 
 <body>
-	<div id="container">This is the main container element.</div>
+	<div id="container">This is the main container content.</div>
 
 </body>
 
