--- a/main.html
+++ b/main.html
@@ -1,15 +1,11 @@
 <!DOCTYPE html>
-
-<html>
-
+<html lang="en">
 <head>
-	<link rel="stylesheet" href="styles.css">
+  <meta charset="UTF-8">
+  <title>Pseudo-Elements Example</title>
+  <link rel="stylesheet" href="styles.css">
 </head>
-	<title>Pseudo-Elements Example</title>
-
 <body>
-	<div id="container">This is the main container content.</div>
-
+  <div id="container">This is the main container content.</div>
 </body>
-
 </html>
