--- a/main.html
+++ b/main.html
@@ -6,6 +6,10 @@
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-  <div id="container">This is the main container content.</div>
+
+  <div id="container">
+    This is the main content of the container.
+  </div>
+
 </body>
 </html>
